--- a/src/app/blog/challenging-open-source-contribution/page.mdx
+++ b/src/app/blog/challenging-open-source-contribution/page.mdx
@@ -1,30 +1,21 @@
+import { formatDate } from '@/lib/utils';
+
 export const metadata = {
   title: '험난한 오픈소스 컨트리뷰션',
-  description: 'svelte.dev 사이트의 REPL에 사용되는 에디터의 커서 색깔 버그를 수정하는 이야기',
-  keywords: '오픈소스, 스벨트, 스벨트킷, 코드미러, open source, svelte, sveltekit, codemirror',
-  author: 'heygwangjin'
-}
+  description:
+    'svelte.dev 사이트의 REPL에 사용되는 에디터의 커서 색깔 버그를 수정하는 이야기',
+  keywords:
+    '오픈소스, 스벨트, 스벨트킷, 코드미러, open source, svelte, sveltekit, codemirror',
+  author: 'heygwangjin',
+};
 
 # 험난한 오픈소스 컨트리뷰션
 
-This is some **bold** and _italics_ text.
-
-This is a list in markdown:
-
-- One
-- Two
-- Three
-
-1. 1
-2. 2
-3. 3
-
----
+<p className="pb-8">{formatDate('2024-12-17')}</p>
 
 
 ```js
 const a = 'hi';
 console.log('hi');
 ```
-
-일단 여기까지
+내용 작성하기
