chore: Fix type error

--- a/src/app/blog/challenging-open-source-contribution/page.mdx
+++ b/src/app/blog/challenging-open-source-contribution/page.mdx
@@ -11,7 +11,7 @@ export const metadata = {
 
 # 험난한 오픈소스 컨트리뷰션
 
-<p className="pb-8">{formatDate('2024-12-17')}</p>
+<p className="pb-8">{formatDate(new Date('2024-12-17'))}</p>
 
 
 ```js
